add css ref into the html

--- a/templates/survey form/index.html
+++ b/templates/survey form/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="style.css">
+
 <div class="container">
     <header class="header">
       <h1 id="title" class="text-center">Survey Form</h1>
